--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
     "remark-html": "^11.0.2",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {}
 }
